<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/all_action"
        android:title="@string/app_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/roller_shutter_action"
        android:menuCategory="secondary"
        android:title="@string/app_roller"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_user"
        android:title="Upate user profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/light_action"
        android:menuCategory="secondary"
        android:title="@string/app_Light"
        app:showAsAction="never" />

    <item
        android:id="@+id/heater_action"
        android:menuCategory="secondary"
        android:title="@string/app_heater"
        app:showAsAction="never" />

</menu>