...
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/device_name_tv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/device_light_silder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:value="20.0"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:layout_constraintLeft_toLeftOf="parent"
...
